syntax = "proto3";

package pet;

option go_package = 'easycoding/api/pet';

import "payment/payment.proto";

// PetType represents the different types of pets in the pet store.
enum PetType {
    PET_TYPE_UNSPECIFIED = 0;
    PET_TYPE_CAT = 1;
    PET_TYPE_DOG = 2;
    PET_TYPE_SNAKE = 3;
    PET_TYPE_HAMSTER = 4;
}

// Pet represents a pet in the pet store.
message Pet {
    int32 pet_id = 1;
    string name = 2;
    PetType pet_type = 3;
}

message GetPetRequest {
  int32 pet_id = 1;
}

message GetPetResponse {
  Pet pet = 1;
}

message PutPetRequest {
  PetType pet_type = 1;
  string name = 2;
}

message PutPetResponse {
  Pet pet = 1;
}

message DeletePetRequest {
  int32 pet_id = 1;
}

message DeletePetResponse {}
